Fix painting assistant decorations in selection tools

BUG:427658