plugins/tools/selectiontools/kis_tool_select_path.cc
@@ -98,6 +98,13 @@ void KisDelegatedSelectPathWrapper::mousePressEvent(KoPointerEvent *event)
 void KisDelegatedSelectPathWrapper::mouseMoveEvent(KoPointerEvent *event)
 {
     DelegatedSelectPathTool::mouseMoveEvent(event);
+
+    // WARNING: the code is duplicated from KisToolPaint::requestUpdateOutline
+    KisCanvas2 * kiscanvas = dynamic_cast<KisCanvas2*>(canvas());
+    KisPaintingAssistantsDecorationSP decoration = kiscanvas->paintingAssistantsDecoration();
+    if (decoration && decoration->visible() && decoration->hasPaintableAssistants()) {
+        kiscanvas->updateCanvas();
+    }
 }
 
 void KisDelegatedSelectPathWrapper::mouseReleaseEvent(KoPointerEvent *event)
